--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: pos_printer_kit_khmer
 description: A Flutter library for printing receipts in Khmer using ESC/POS-compatible thermal printers.
-version: 1.0.3
+example: example/
+version: 1.0.4
 homepage: https://github.com/sopheamen007/flutter_pos_printer_kit_khmer
 
 environment:
